--- a/index.html
+++ b/index.html
@@ -1,5 +1,8 @@
-
-
-
-
-
+<html>
+    <head>
+        <p>Hello World</p>
+    </head>
+    <body>
+        <h1>Hello there</h1>
+    </body>
+</html>
