passenger counter working

--- a/index.html
+++ b/index.html
@@ -1,8 +1,13 @@
 <html>
     <head>
         <p>Hello World</p>
+        <link rel="stylesheet" href="index.css">
     </head>
     <body>
-        <h1>Hello there</h1>
+        <h1>Passenger count:</h1>
+        <h2 id="pCount">0</h2>
+        <button id="incrementButton" onclick="incrementFunction()">Increment</button>
+        <script src="index.js">
+        </script>
     </body>
 </html>
